--- a/laba 2.1
+++ b/laba 2.1
@@ -1,12 +1,13 @@
 #include <iostream>
+#include <math.h>
 using namespace std;
-
-int main()
-{
-	double x1, y1, x2, y2,L ;
-  cout << "(x1;y1), (x2;y2): ";
-	cin >> x1 >> y1 >> x2 >> y2;
-	L = sqrt((x1 - x2)*(x1 - x2) + (y1 - y2)*(y1 - y2));
-	cout << "L=" << L;
-	return 0;
+int main() {
+    float x1,x2,y1,y2,p;
+    cout<<"1 tjcka vvedite"<<endl;
+    cin>>x1>>y1;
+    cout<<"2 tjcka vvedite"<<endl;
+    cin>>x2>>y2;
+    p=sqrt((x1-x2)*(x1-x2)+(y1-y2)*(y1-y2));
+    cout<<"Rassyojanie="<<p<<endl;
+    return 0;
 }
