--- a/laba 2.2
+++ b/laba 2.2
@@ -1,19 +1,14 @@
 #include <iostream>
+#include <cmath>
 using namespace std;
-
-int main()
+int main() 
 {
-	double A, B, C, BC, AC;
-  cout << "A, B, C: "
-	cin >> A >> B >> C;
-	if (A >= C) { AC = A - C;}
-  else {
-		AC = C - A;
-	}
-	if (B >= C) { BC = B - C;}
-  else {
-		BC = C - B;
-	}
-	cout << "AC=" << AC << " " << "BC=" << BC;
-	return 0;
+    cout<<"Введите координаты точек"<<endl;
+    int a,b,c,ac,bc,sum;
+    cin>>a>>b>>c;
+    ac=abs(a-c);
+    bc=abs(c-b);
+    sum=ac+bc;
+    cout<<"AC="<<ac<<", BC="<<bc<<", SUMMA="<<sum<<endl;
+    return 0;
 }
