--- a/laba 2.4
+++ b/laba 2.4
@@ -1,15 +1,14 @@
 #include <iostream>
+#include <math.h>
 using namespace std;
-
-int main()
+int main() 
 {
-	double x1, y1, x2, y2, a,b,P,S;
-  cout << "(x1;y1), (x2;y2): ";
-	cin >> x1 >> y1 >> x2 >> y2;
-	a = abs(x1 - x2);
-	b = abs(y1 - y2);
-	P = 2 * (a + b);
-	S = a * b;
-	cout << "P=" << P << " " << "S=" << S;
-	return 0;
+    cout<<"Vvedite tochki"<<endl;
+    int x1,x2,y1,y2,x,y,s,p;
+    cin>>x1>>y1>>x2>>y2;
+    x=abs(x1-x2);
+    y=abs(y1-y2);
+    s=x*y;
+    p=(x+y)*2;
+    cout<<"P="<<p<<", S="<<s<<endl;
 }
