--- a/laba 2.5
+++ b/laba 2.5
@@ -1,17 +1,16 @@
 #include <iostream>
+#include <math.h>
 using namespace std;
-
 int main()
 {
-	double x1, y1, x2, y2, x3, y3 ,a, b, c, P, S, p1;
-   cout << "(x1;y1), (x2;y2), (x3;y3): ";
-	cin >> x1 >> y1 >> x2 >> y2 >> x3 >> y3;
-	a = sqrt(pow(x2 - x1,2) + pow(y2 - y1,2));
-	b = sqrt((x3 - x2) * (x3 - x2) + (y3 - y2) * (y3 - y2));
-	c = sqrt((x1 - x3) * (x1 - x3) + (y1 - y3) * (y1 - y3));
-	P = a + b + c;
-	p1 = (a + b + c) / 2;
-	S = sqrt(p1 * (p1 - a) * (p1 - b) * (p1 - c));
-	cout << "P=" << P << " " <<"S=" << S;
-	return 0;
+    cout<<"Vvedite tochki"<<endl;
+    int x1,x2,x3,y1,y2,y3;
+    float s,p,a,b,c;
+    cin>>x1>>y1>>x2>>y2>>x3>>y3;
+    a=sqrt((x1-x2)*(x1-x2)+(y1-y2)*(y1-y2));
+    b=sqrt((x1-x3)*(x1-x3)+(y1-y3)*(y1-y3));
+    c=sqrt((x3-x2)*(x3-x2)+(y3-y2)*(y3-y2));
+    p=a+b+c;
+    s=sqrt(p/2*(p/2-a)*(p/2-b)*(p/2-c));
+    cout<<"S="<<s<<", P="<<p;
 }
